Alterando logica de criação de usuário
